cheng more menu and panel

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -295,7 +295,7 @@ body header .popover.bottom > .arrow:after {
 body .navbar-default .navbar-nav > .open > a,
 body .navbar-default .navbar-nav > .open > a:focus,
 body .navbar-default .navbar-nav > .open > a:hover {
-  background: green;
+  background: #16191f;
 }
 body .menu {
   background-color: #282f3d;
@@ -1583,7 +1583,7 @@ body footer .container .row .abaout .year_company {
     margin-left: 100px;
   }
   body .main .container .main_picture .row .first_panel .text_bot .right_t {
-    width: 29.7%;
+    width: 29.6%;
     text-align: center;
   }
   body .main .container .main_picture .row .second_panel {
@@ -2120,6 +2120,9 @@ body footer .container .row .abaout .year_company {
   body .main .container .row .mq {
     max-width: 51%;
   }
+  body .main .container .main_picture .row .first_panel .text_bot .right_t {
+    width: 28.2%;
+  }
   body .main .container .row .line0 .row .tournament {
     width: 30%;
   }
@@ -2381,6 +2384,9 @@ body footer .container .row .abaout .year_company {
   body .main {
     height: 6980px;
   }
+  body .main .container .main_picture .row .first_panel .text_bot .right_t {
+    width: 27.6%;
+  }
   body footer {
     height: 300px;
   }
@@ -2391,6 +2397,9 @@ body footer .container .row .abaout .year_company {
 @media (max-width: 600px) {
   body .main {
     height: 7030px;
+  }
+  body .main .container .main_picture .row .first_panel .text_bot .right_t {
+    width: 27.3%;
   }
   body .main .container .qwe .qwe2 {
     width: 60%;
@@ -2469,6 +2478,9 @@ body footer .container .row .abaout .year_company {
   body .main {
     height: 7065px;
   }
+  body .main .container .main_picture .row .first_panel .text_bot .right_t {
+    width: 27.1%;
+  }
   body footer .container .row .mediaq_768_1 {
     width: 100%;
   }
@@ -2484,6 +2496,9 @@ body footer .container .row .abaout .year_company {
 @media (max-width: 484px) {
   body .main {
     min-height: 7120px;
+  }
+  body .main .container .main_picture .row .first_panel .text_bot .right_t {
+    width: 26%;
   }
   body footer {
     min-height: 350px;
@@ -2505,6 +2520,9 @@ body footer .container .row .abaout .year_company {
   }
 }
 @media (max-width: 440px) {
+  body .main .container .main_picture .row .first_panel .text_bot .right_t {
+    width: 25.3%;
+  }
   body footer .container .row .social_fb {
     height: 66px;
   }
