--- a/app/less/main.less
+++ b/app/less/main.less
@@ -295,7 +295,7 @@ body{
 /*******************************end popover for signed****************************************/
 	}
 	.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover{
-		background:green;
+		background:#16191f;
 	}
 	.menu{
 		background-color: #282f3d;
@@ -1711,7 +1711,7 @@ body{
 		margin-left: 100px;
 	}
 	body .main .container .main_picture .row .first_panel .text_bot .right_t{
-		width:29.7%;
+		width:29.6%;
 		text-align: center;
 	}
 	body .main .container .main_picture .row .second_panel{
@@ -2260,7 +2260,10 @@ body footer .container .row{
 	body .main .container .row .mq{
 		max-width:51%;
 	}
-
+	
+	body .main .container .main_picture .row .first_panel .text_bot .right_t{
+		width:28.2%;
+	}
 	body .main .container .row .line0 .row .tournament{
 		width:30%;
 	}
@@ -2527,6 +2530,9 @@ body footer .container .row{
 	body .main{
 		height:6980px;
 	}
+	body .main .container .main_picture .row .first_panel .text_bot .right_t{
+		width:27.6%;
+	}
 	body footer{
 		height:300px;
 	}
@@ -2539,7 +2545,9 @@ body footer .container .row{
 	body .main{
 		height:7030px;
 	}
-
+	body .main .container .main_picture .row .first_panel .text_bot .right_t{
+		width:27.3%;
+	}
 	body .main .container .qwe .qwe2{
 		width: 60%;
     	margin: 0 auto;
@@ -2622,6 +2630,9 @@ body footer .container .row{
 	body .main{
 		height:7065px;
 	}
+	body .main .container .main_picture .row .first_panel .text_bot .right_t{
+		width:27.1%;
+	}
 	body footer .container .row .mediaq_768_1{
 		width:100%;
 	}
@@ -2640,6 +2651,9 @@ body footer .container .row{
 
 	body .main{
 		min-height: 7120px;
+	}
+	body .main .container .main_picture .row .first_panel .text_bot .right_t{
+		width:26%;
 	}
 	body footer{
 		min-height:350px;
@@ -2662,6 +2676,9 @@ body footer .container .row{
 }
 
 @media(max-width:440px){
+	body .main .container .main_picture .row .first_panel .text_bot .right_t{
+		width:25.3%;
+	}
 	body footer .container .row .social_fb{
 		height: 66px;
 	}
